po/POTFILES.in: More updates.
Original commit message from CVS:
* po/POTFILES.in:
More updates.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,15 +4,18 @@ ext/alsa/gstalsamixer.c
 ext/alsa/gstalsamixertrack.c
 ext/audiofile/gstafsink.c
 ext/audiofile/gstafsrc.c
+ext/cdio/cddasrc.c
 ext/cdparanoia/gstcdparanoia.c
+ext/dvdnav/dvdnavsrc.c
 ext/gnomevfs/gstgnomevfssink.c
 ext/gnomevfs/gstgnomevfssrc.c
-ext/kio/kiosrc.cpp
+ext/jpeg/gstjpegdec.c
 ext/sndfile/gstsf.c
 gconf/gstreamer.schemas.in
 gst-libs/gst/play/play.c
 gst/avi/gstavimux.c
 gst/multifilesink/gstmultifilesink.c
+gst/tags/tags.c
 gst/tcp/gsttcp.c
 gst/tcp/gsttcpclientsink.c
 gst/tcp/gsttcpclientsrc.c
@@ -23,9 +26,8 @@ sys/dxr3/dxr3videosink.c
 sys/oss/gstosselement.c
 sys/oss/gstossmixer.c
 sys/sunaudio/gstsunmixer.c
-sys/v4l/v4l-overlay_calls.c
 sys/v4l/v4l_calls.c
 sys/v4l/v4l_calls.h
-sys/v4l2/v4l2-overlay_calls.c
 sys/v4l2/v4l2_calls.c
 sys/v4l2/v4l2src_calls.c
+sys/v4lradio/v4lradio_calls.c
