configure.ac: Require cairo 0.5.x
Original commit message from CVS:
* configure.ac:
Require cairo 0.5.x
* ext/cairo/gstcairo.c:
Change plugin name to 'cairo' - 'timeoverlay' doesn't make
much sense and conflicts with the pango timeoverlay plugin.
* ext/cairo/gsttextoverlay.c: (gst_cairotextoverlay_get_type),
(gst_textoverlay_render_text), (gst_textoverlay_loop),
(gst_textoverlay_font_init), (gst_textoverlay_finalize),
(gst_textoverlay_init), (gst_textoverlay_set_property):
* ext/cairo/gsttextoverlay.h:
* ext/cairo/gsttimeoverlay.c: (gst_cairotimeoverlay_get_type),
(gst_timeoverlay_class_init), (gst_timeoverlay_setup),
(gst_timeoverlay_planar411):
* ext/cairo/gsttimeoverlay.h:
Make compile and somewhat work with cairo 0.5. The textoverlay
plugin is bitrotten and/or unfinished though and needs more
work (text positioning, invalid memory access, parse font-desc
property properly).

--- a/configure.ac
+++ b/configure.ac
@@ -851,7 +851,7 @@ GST_CHECK_FEATURE(AUDIORESAMPLE, [audioresample plug-in], audioresample, [
 dnl *** cairo ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_CAIRO, true)
 GST_CHECK_FEATURE(CAIRO, [cairo plug-in], cairo, [
-  PKG_CHECK_MODULES(CAIRO, cairo, HAVE_CAIRO=yes, HAVE_CAIRO=no)
+  PKG_CHECK_MODULES(CAIRO, cairo >= 0.5.0 cairo < 0.6.0, HAVE_CAIRO=yes, HAVE_CAIRO=no)
   AC_SUBST(CAIRO_CFLAGS)
   AC_SUBST(CAIRO_LIBS)
 ])
