configure.ac: Add imagemixer/dvdsubdec.
Original commit message from CVS:
* configure.ac:
Add imagemixer/dvdsubdec.
* ext/dvdnav/dvdnavsrc.c: (dvdnav_build_titlelang_event):
For menu subpicture streams, set a name too, so dvddemux picks
it up and can still validly emit no-more-pads.
* ext/dvdnav/gst-dvd-2:
Example.
* ext/pango/Makefile.am:
* ext/pango/gsttextoverlay.c: (plugin_init):
* ext/pango/gsttextrender.c: (gst_text_render_get_type),
(gst_text_render_base_init), (gst_text_render_class_init),
(resize_bitmap), (render_text), (gst_text_render_link),
(gst_text_render_fixate), (gst_text_overlay_blit_yuv420),
(gst_text_render_chain), (gst_text_render_finalize),
(gst_text_render_init), (gst_text_render_set_property),
(gst_text_render_get_property):
* ext/pango/gsttextrender.h:
Chain-based text-rendering element (#306555).
* gst/dvdsubdec/Makefile.am:
* gst/dvdsubdec/dvdsubdec.c: (gst_dvdsubdec_get_type),
(gst_dvdsubdec_base_init), (gst_dvdsubdec_class_init),
(gst_dvdsubdec_init), (gst_dvdsubdec_finalize),
(gst_dvdsubdec_getcaps_video), (gst_dvdsubdec_link_video),
(gst_dvdsubdec_src_event), (dvdsubdec_get_event_delay),
(gst_dvdsubdec_parse_subpic), (gst_get_nibble),
(gst_setup_palette), (gst_get_rle_code), (gst_draw_rle_line),
(gst_dvdsubdec_merge_title), (gst_send_empty_fill),
(gst_send_subtitle_frame), (dvdsubdec_advance_time),
(gst_dvdsubdec_handle_subtitle), (gst_dvdsubdec_handle_dvd_event),
(plugin_init):
Chain-based DVD subtitle decoder element (#301312), based
on patch by Jan Schmidt <thaytan@mad.scientist.com>.
* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
(gst_ffmpeg_pixfmt_to_caps), (gst_ffmpeg_caps_to_pixfmt):
* gst/ffmpegcolorspace/imgconvert.c:
* gst/ffmpegcolorspace/imgconvert_template.h:
Conserve alpha channel for BGRA32->AYUV, fix BGRA/BGRX
masks (#308638).
* gst/imagemixer/Makefile.am:
* gst/imagemixer/README:
* gst/imagemixer/blend.c:
* gst/imagemixer/blend.h:
* gst/imagemixer/mixer.c: (gst_image_mixer_base_init),
(gst_image_mixer_class_init), (gst_ima

--- a/configure.ac
+++ b/configure.ac
@@ -383,6 +383,7 @@ GST_PLUGINS_ALL="\
 	debug \
 	deinterlace \
 	dvdlpcmdec \
+	dvdsubdec \
 	effectv \
 	equalizer \
 	festival \
@@ -391,6 +392,7 @@ GST_PLUGINS_ALL="\
 	flx \
 	freeze \
 	goom \
+	imagemixer \
 	interleave \
 	law \
 	level \
@@ -1995,6 +1997,7 @@ gst/cutter/Makefile
 gst/debug/Makefile
 gst/deinterlace/Makefile
 gst/dvdlpcmdec/Makefile
+gst/dvdsubdec/Makefile
 gst/effectv/Makefile
 gst/equalizer/Makefile
 gst/festival/Makefile
@@ -2004,6 +2007,7 @@ gst/flx/Makefile
 gst/freeze/Makefile
 gst/games/Makefile
 gst/goom/Makefile
+gst/imagemixer/Makefile
 gst/interleave/Makefile
 gst/law/Makefile
 gst/level/Makefile
