Fix xfixes cursor addition (thanks Luca for patch)
Original commit message from CVS:
2005-07-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

* configure.ac:
* sys/ximage/Makefile.am:
* sys/ximage/ximagesrc.c: (gst_ximagesrc_ximage_get),
(gst_ximagesrc_getcaps), (gst_ximagesrc_free_data_func),
(composite_pixel), (gst_ximagesrc_get), (ximagesrc_imagepool_free),
(gst_ximagesrc_change_state), (gst_ximagesrc_init),
(gst_ximagesrc_set_property), (gst_ximagesrc_get_property),
(gst_ximagesrc_finalize), (gst_ximagesrc_class_init):
Fix xfixes cursor addition (thanks Luca for patch)
Add xdamage support

--- a/configure.ac
+++ b/configure.ac
@@ -626,11 +626,26 @@ GST_CHECK_FEATURE(X, [X libraries and plugins],
     AC_SUBST(X_CFLAGS)
     AC_SUBST(X_LIBS)
     dnl check for Xfixes
-    PKG_CHECK_MODULES(XFIXES, xfixes, HAVE_XFIXES="yes", HAVE_XFIXES="no") 
+    PKG_CHECK_MODULES(XFIXES, xfixes, HAVE_XFIXES="yes", HAVE_XFIXES="no")
+    if test "x$HAVE_XFIXES" = "xyes"
+    then
+    	XFIXES_CFLAGS="-DHAVE_XFIXES $XFIXES_CFLAGS"
+    fi
     AC_SUBST(XFIXES_LIBS)
     AC_SUBST(XFIXES_CFLAGS)
     
     AM_CONDITIONAL(HAVE_XFIXES, test "x$HAVE_XFIXES" = "xyes")
+
+    dnl check for Xdamage
+    PKG_CHECK_MODULES(XDAMAGE, xdamage, HAVE_XDAMAGE="yes", HAVE_XDAMAGE="no")
+    if test "x$HAVE_XDAMAGE" = "xyes"
+    then
+    	XDAMAGE_CFLAGS="-DHAVE_XDAMAGE $XDAMAGE_CFLAGS"
+    fi
+    AC_SUBST(XDAMAGE_LIBS)
+    AC_SUBST(XDAMAGE_CFLAGS)
+    
+    AM_CONDITIONAL(HAVE_XDAMAGE, test "x$HAVE_XDAMAGE" = "xyes")
 
   fi
   AC_SUBST(HAVE_X)
