--- a/configure.ac
+++ b/configure.ac
@@ -1792,7 +1792,7 @@ GST_CHECK_FEATURE(WAVPACK, [wavpack plug-in], wavpack, [
 dnl *** libx264 (MPEG-4 part 10/h.264/AVC encoder) ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_X264, true)
 GST_CHECK_FEATURE(X264, [x264 plug-in], x264, [
-  GST_CHECK_LIBHEADER(X264, x264, x264_nal_encode, -lm, x264.h,
+  GST_CHECK_LIBHEADER(X264, x264, x264_encoder_reconfig, -lm, x264.h,
       X264_LIBS="$LDFLAGS -lx264 -lm"
       X264_CFLAGS="$CFLAGS"
       AC_SUBST(X264_LIBS)
